<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rating</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="director">Director</string>
    <string name="duration">Duration</string>
    <string name="starring">Starring</string>
    <string name="movie_name"> Movie Name</string>
    <string name="save">Save</string>
    <string name="write_review">Write review here</string>
    <string name="year">year</string>

</resources>